# rusty_cloud

./: .gitignore  Cargo.toml  rust-toolchain.toml
.devcontainer/: .env  .env.example  Dockerfile  devcontainer.json  docker-compose.yml
browser/: Cargo.toml  Trunk.toml  index.html  styles.css
browser/src/: app.rs  auth.rs  main.rs
db/: Cargo.toml  schema.sql
db/migrations/: 20230521094212_create_user_table.sql  20230524041041_create_files_table.sql  20230526164918_create_folders_table.sql  20230526170310_add_folder_id_on_files.sql
db/src/auth/: mod.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.tsx
http/: Cargo.toml
http-client/: Cargo.toml  LICENSE_MIT
http-client/src/: lib.rs
http_client/: Cargo.toml
interfaces/: Cargo.toml
interfaces/src/: auth.rs  error_response.rs  files.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/helpers/: user.rs
server/src/http/: error.rs  mod.rs
server/src/http/auth/: login.rs  mod.rs  register.rs
server/src/http/files/: create_or_update.rs  download.rs  index.rs  mod.rs
server/src/http/folders/: create_folder.rs  get_folder.rs  mod.rs  update_folder.rs
