[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.3.0"
reqwest = { version = "0.11.16", features = ["json", "multipart", "gzip"] }
interfaces = { path = "../interfaces" }
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
